<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterAllUserBloco"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp">

    <ImageView
        android:id="@+id/filterAllNoLoggedUserLogo"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/filter_all_logged_user_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/filterAllNoLoggedUserName"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:text="@string/filter_all_no_logged_user_name"
            android:textColor="#F48C06"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold"/>

        <ImageView
            android:id="@+id/filterAllNoLoggedLikeIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/not_liked"
            android:contentDescription="@string/liked_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/filterAllNoLoggedUserSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_all_no_logged_user_slogan"
        android:textColor="#F48C06"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_location_on_24"
            android:layout_gravity="center"
            android:contentDescription="@string/location_icon" />

        <TextView
            android:id="@+id/filterAllNoLoggedUserDistance"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="20dp"
            android:text="@string/filter_all_no_logged_user_distance"
            android:textColor="#F48C06"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:id="@+id/filterAllNoLoggedContactBtn"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="20dp"
            android:text="@string/filter_all_contact_btn"
            android:textColor="#F48C06"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</LinearLayout>