<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".DonorRecipientsFilterFinishedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/filterFinishedLoggedUserLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/rest_one"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/filter_finished_logged_user_logo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/filterFinishedLoggedUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_finished_logged_user_name"
                    android:textColor="#F48C06"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/filterFinishedLoggedUserLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_finished_logged_user_location"
                        android:textColor="#F48C06"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_regular"
                        android:textAlignment="center"/>

                    <ImageView
                        android:id="@+id/imageLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_location_on_24"
                        android:paddingStart="10dp"
                        android:contentDescription="@string/location_icon"
                        tools:ignore="RtlSymmetry"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/filterAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_filter_all"
                android:textColor="#F48C06"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/filterScheduled"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_filter_scheduled"
                android:textColor="#F48C06"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/filterFinished"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_filter_finished"
                android:textColor="#F48C06"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filterFinishedListUserBloco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFBB63"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/filterFinishedNoLoggedListUserLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rest_one"
                    android:contentDescription="@string/filter_finished_no_logged_user_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/filterFinishedNoLoggedListUserName"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orangeConnectFood"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="16sp"
                            android:text="@string/filter_finished_no_logged_name"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:src="@drawable/liked"
                            android:textAlignment="textEnd"
                            android:contentDescription="@string/liked_icon" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orangeConnectFood"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="12sp"
                            android:text="@string/filter_finished_data_de_agendamento"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/filterFinishedScheduledDate"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orangeConnectFood"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="12sp"
                            android:text="@string/filter_finished_scheduled_date"
                            android:textAlignment="textEnd"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orangeConnectFood"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="12sp"
                        android:text="@string/filter_finished_standard_text"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_location_on_24"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/location_icon" />

                        <TextView
                            android:id="@+id/filterFinishedNoLoggedUserDistance"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orangeConnectFood"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="12sp"
                            android:text="@string/filter_finished_no_logged_distance"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"/>

                        <TextView
                            android:id="@+id/filterFinishedFinishSchedulingBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orangeConnectFood"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp"
                            android:text="@string/filter_finished_finish_btn"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFBB63"
                android:layout_marginVertical="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filterFinishedBackBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center"
                android:rotationY="180"
                android:contentDescription="@string/arrow_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btn_voltar"
                android:textColor="#F48C06"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>